2007-11-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el (w3m-create-image): Parse image data if it failed in
	identifying type.

	* w3m-xmas.el (w3m-create-image): Ditto.

2007-11-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-resize-inline-image-internal): Validate image url.
	Reported by Naohiro Aota <nao.aota@gmail.com>.

2007-11-27  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-toggle-inline-images-internal): Confirm retrieving
	non-secure image.
	(w3m-resize-inline-image-internal): Ditto.

2007-11-27  Katsumi Yamaoka  <yamaoka@jpl.org>,
	    TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-retrieve-and-render): Permit leaving safe pages without
	confirmation for several safe commands.

2007-11-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-symbol.el: Autoload w3m-mule-unicode-p when compiling.

	* w3m-proc.el: Update the way to suppress compile warning for gensym.

2007-11-26  Trent W. Buck  <trentbuck@gmail.com>

	* w3m.el (w3m-confirm-leaving-secure-page): New user option.
	(w3m-retrieve-and-render): Use it.

2007-11-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-use-japanese-menu): Default to nil for XEmacs 21.4 and
	SXEmacs.
	(w3m-link-map): New variable.
	(w3m-fontify-anchors): Add menu to links.
	(w3m-read-file-name): Don't use default file name if it is "".
	(w3m-link-menu): Define.

2007-11-06  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-redisplay-with-charset): Strip first 'about://source/'
	before setf w3m-arrived-content-charset.
	(w3m-redisplay-and-reset): Ditto.

2007-11-05  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-filter.el (w3m-filter-rules): Add rule for the site of imepita.
	(w3m-filter-imepita): New function.

2007-11-03  David Hansen  <david.hansen@gmx.net>

	* w3m-proc.el (w3m-process-wait-process): Preserve the current buffer
	\(work around an Emacs bug\).

2007-11-03  David Hansen  <david.hansen@gmx.net>

	* w3m.el (w3m-relationship-oddmuse-estimate): Follow new page layout.
